--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,21 @@
-
+csas-style
+knitr-cache-docx
+knitr-cache-tex
+knitr-cache-pdf
+knitr-figs-docx
+knitr-figs-pdf
+reference-materials
+_bookdown_files
 
 .Rproj.user
 .Rhistory
 .RData
 .DS_Store
 
-
-csas-style
-knitr-cache-docx
-knitr-cache-pdf
-knitr-cache-tex
-knitr-figs-docx
-knitr-figs-pdf
-reference-materials
-models*
-
 *.aux
 *.jpg
+*.tiff
+*.png
 *.knit.md
 *.log
 *.rda
